--- a/templates/questions.mustache
+++ b/templates/questions.mustache
@@ -28,7 +28,7 @@
     <div class="question-item card mb-3">
         <input type="hidden" name="id" value="{{id}}">
         <div class="card-header bg-light">
-            <div class="question-name h4 text-primary">{{name}}</div>
+            <div class="question-name text-primary">{{{name}}}</div>
         </div>
         <div class="card-body">
             <div class="question-text">
