Now shows the editing url

--- a/templates/questions.mustache
+++ b/templates/questions.mustache
@@ -33,6 +33,7 @@
         <div class="card-body">
             <div class="question-text">
                 {{{questiontext}}}
+                <a href={{{editurl}}}> Edit question</a>
             </div>
         </div>
     </div>
